--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-lazy-load-image-component": "^1.6.3",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.1",
+    "vite-plugin-pwa": "^1.0.3",
     "web-vitals": "^5.1.0",
     "workbox-webpack-plugin": "^7.3.0"
   },
