--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "react-lazy-load-image-component": "^1.6.3",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.1",
-    "vite-plugin-pwa": "^1.0.3",
     "web-vitals": "^5.1.0",
     "workbox-webpack-plugin": "^7.3.0"
   },
@@ -31,6 +30,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vite-plugin-pwa": "^1.0.3"
   }
 }
